# sports_action_shot_extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
docs/learning/: action_shot_extractor_guide.ipynb  template_matching_exercises.ipynb
src/action_shot_extractor/: __init__.py  cli.py  pipeline.py  player_matcher.py  utils.py
tests/: test_basic.py
